改进CSS导入方式，现在编译时会同时优化CSS
这样使登陆页的请求数减少到5个

--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 	<title>Theses Admin</title>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
-	<link rel="stylesheet" href="css/theses.main.css" />
-	<link rel="stylesheet" href="css/theses.gray.css" />
+	<link rel="stylesheet" href="css/theses.css" />
 </head>
 <body>
 	<div id="app-alerts"></div>
 	<div id="theses-app"></div>
 	<div id="loading">加载中...</div>
 </body>
-</html>
 <script data-main="js/boot" src="js/require.js" async="true"></script>
+</html>
