完成私信界面

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>Alpha 论文管理系统</title>
 	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<link rel="stylesheet" href="css/theses.css" />
 </head>
 <body>
