第一次访问应用时网速慢导致无法加载的问题

--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 	<div id="theses-app"></div>
 	<div id="loading">加载中...</div>
 </body>
-<script data-main="js/boot" src="js/require.js" async="true"></script>
+<script data-main="js/main" src="js/require.js" async="true"></script>
 </html>
