使用base64 data优化小图片加载、删除无用图片

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="app-alerts"></div>
 	<div id="theses-app"></div>
-	<div id="loading">加载中...</div>
+	<div id="loading" class="loading-background">加载中...</div>
 </body>
 </html>
 
