修改文档HTML模板结构

--- a/document_templates/2.html
+++ b/document_templates/2.html
@@ -38,4 +38,8 @@
 	</tr>
 </table>
 
-<script id="document-2-manifast" type="application/json"></script>
+<script id="document-2-manifast" type="application/json">
+{
+	"title": "本科生论文（设计）开题报告"
+}
+</script>
