完成文档创建接口提交部分，完成文档模板下载功能

--- a/document_templates/3.html
+++ b/document_templates/3.html
@@ -5,34 +5,34 @@
 			
 			<h5>第 1 次检查</h5>
 			<p>学生总结：</p>
-			<textarea></textarea>
+			<textarea data-parameter="student1"></textarea>
 			<p>指导教师意见：</p>
-			<textarea></textarea>
+			<textarea data-parameter="teacher1"></textarea>
 
 			<h5>第 2 次检查</h5>
 			<p>学生总结：</p>
-			<textarea></textarea>
+			<textarea data-parameter="student2"></textarea>
 			<p>指导教师意见：</p>
-			<textarea></textarea>
+			<textarea data-parameter="teacher2"></textarea>
 
 			<h5>第 3 次检查</h5>
 			<p>学生总结：</p>
-			<textarea></textarea>
+			<textarea data-parameter="student3"></textarea>
 			<p>指导教师意见：</p>
-			<textarea></textarea>
+			<textarea data-parameter="teacher3"></textarea>
 
 			<h5>第 4 次检查</h5>
 			<p>学生总结：</p>
-			<textarea></textarea>
+			<textarea data-parameter="student4"></textarea>
 			<p>指导教师意见：</p>
-			<textarea></textarea>
+			<textarea data-parameter="teacher4"></textarea>
 		</td>
 	</tr>
 	<tr>
 		<td style="width: 14px">总体完成情况</td>
 		<td>
 			<p>指导教师意见：</p>
-			<textarea></textarea>
+			<textarea data-parameter="teacherall"></textarea>
 		</td>
 	</tr>
 	<script type="text/javascript">
